[package]
name = "voice_play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = "4.5.4"
cpal = "0.15.3"
ctrlc = "3.4.4"
enigo = "0.2.0"
picovoice = "3.0.3"
pv_recorder = "1.2.2"
